--- a/html/task-1.html
+++ b/html/task-1.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-1-button-1">Arr-1</button>
-<button id="task-1-button-2">Arr-2</button>
+<button id="task-1-button-1">updateUserInfo</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
