--- a/html/task-5.html
+++ b/html/task-5.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-5-button-1">task-5-custom</button>
-<button id="task-5-button-2">task-5-1</button>
-<button id="task-5-button-3">task-5-2</button>
-<button id="task-5-button-4">task-5-3</button>
+<button id="task-5-button-1">getNameValues</button>
+<button id="task-5-button-2">getQuantityValues</button>
+<button id="task-5-button-3">getCategoryValues</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
