--- a/html/task-6.html
+++ b/html/task-6.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-6-button">Sum of numbers</button>
+<button id="task-6-button-1">calculateTotalPriceRadars</button>
+<button id="task-6-button-2">calculateTotalPriceDroids</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
