--- a/html/task-2.html
+++ b/html/task-2.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-2-button-1">Order-1</button>
-<button id="task-2-button-2">Order-2</button>
-<button id="task-2-button-3">Custom-order</button>
-<button id="task-2-button-4">Order-4</button>
+<button id="task-2-button-1">countProps</button>
+<button id="task-2-button-2">countProps</button>
+<button id="task-2-button-3">countProps</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
