--- a/html/task-3.html
+++ b/html/task-3.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-3-button-1">Longest-word-custom</button>
-<button id="task-3-button-2">Longest-word-1</button>
-<button id="task-3-button-3">Longest-word-2</button>
+<button id="task-3-button-1">findBestEmployee-1</button>
+<button id="task-3-button-2">findBestEmployee-2</button>
+<button id="task-3-button-3">findBestEmployee-3</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
