--- a/html/task-4.html
+++ b/html/task-4.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-4-button-1">Task-4-custom-string</button>
-<button id="task-4-button-2">Task-4-1</button>
-<button id="task-4-button-3">Task-4-2</button>
-<button id="task-4-button-4">Task-4-3</button>
+<button id="task-4-button-1">countTotalSalary-1</button>
+<button id="task-4-button-2">countTotalSalary-2</button>
+<button id="task-4-button-3">countTotalSalary-3</button>
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
