--- a/html/task-7.html
+++ b/html/task-7.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-<button id="task-7-button">Register</button>
+<button id="task-7-button-1">deposit</button>
+<button id="task-7-button-2">withdraw</button>
+<button id="task-7-button-3">yourBalance</button>
+<button id="task-7-button-4">getTransactionDetails</button>
+<button id="task-7-button-5">getTransactionTotal</button>
+
 <a href="../index.html">
     <button class="btn-gb" type="button">Back to task list</button>
 </a>
